@@ -1,6 +1,6 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-Notes.txt
+^Notes\.txt$
 ^doc$
 ^Meta$
 ^drafts$
