@@ -1,9 +1,29 @@
 # README #
 
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/AlphaSimR)](https://cran.r-project.org/package=AlphaSimR)
+[![](http://cranlogs.r-pkg.org/badges/grand-total/AlphaSimR)](https://cran.r-project.org/package=AlphaSimR)
+[![](http://cranlogs.r-pkg.org/badges/AlphaSimR)](https://cran.r-project.org/package=AlphaSimR)
+
 The AlphaSimR website is currently under development and has only been made available for testing at this time. This page will change when the website is ready for widespread use.
 
-AlphaSimR is available on both CRAN and Github. The CRAN version will always match the master branch on Github. The devel branch will always be the most current version. This version may not be stable, so use at your own risk. You can download this version using the 'devtools' library and the following command: devtools::install_github("gaynorr/AlphaSimR@devel")
+## Publication
 
-A manuscript detailing the theory behind AlphaSimR and its use has been published by G3. The  manuscript is available here: https://doi.org/10.1093/g3journal/jkaa017
+Gaynor, R. Chris, Gregor Gorjanc, and John M. Hickey. 2021. AlphaSimR: an R package for breeding program simulations. G3 Gene|Genomes|Genetics 11(2):jkaa017. https://doi.org/10.1093/g3journal/jkaa017.
 
+## Download
 
+[AlphaSimR](https://cran.r-project.org/package=AlphaSimR) is available on CRAN.
+
+To install use:
+
+    install.packages('AlphaSimR')
+
+The development version of AlphaSimR (potentially unstable) can be accessed from the devel branch on GitHub.
+
+To install use:
+
+    devtools::install_github(repo="gaynorr/AlphaSimR@devel")
+
+To install with vignettes use:
+
+    devtools::install_github(repo="gaynorr/AlphaSimR@devel", build_vignettes=TRUE)
